simple/test/features/errors/semantic/e1055_type_alias_bounds.spl
# E1055: Type Alias Bounds

Feature: E1055 - Type Alias Cannot Have Trait Bounds
  As a Simple compiler
  I want to detect trait bounds on type aliases
  So that type aliases remain simple type synonyms

  Background:
    Given I have the Simple compiler

  Scenario: Type alias with trait bounds
    When I compile:
      '''
      type MyInt<T: Display> = T  # Error: bounds not allowed
      '''
    Then I should see error E1055 at line 1
    And the error message should be "type alias cannot have trait bounds"
    And the label should indicate "bounds not allowed"
    And the help should suggest "remove trait bounds from type alias"

  Scenario: Valid type alias
    When I compile:
      '''
      type MyInt = i32  # OK: no bounds
      type Pair<T> = (T, T)  # OK: generic without bounds
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      type MyInt<T: Display> = T
      '''
    Then I should see error E1055
    And the error message should contain "타입 별칭 제약"
